--- a/barbershop/item.html
+++ b/barbershop/item.html
@@ -56,9 +56,16 @@
               <img src="img/travel-kit.jpg" width="460" height="498" alt="Baxter of California">
             </div>
             <div class="product-images">
-              <img src="img/travel-kit-prev-1.jpg" width="140" height="149" alt="Baxter of California">
-              <img src="img/travel-kit-prev-2.jpg" width="140" height="149" alt="Baxter of California">
-              <img src="img/travel-kit-prev-3.jpg" width="140" height="149" alt="Baxter of California">         
+              <div class="img-prev">
+                <img src="img/travel-kit-prev-1.jpg" width="140" height="149" alt="Baxter of California">
+              </div>
+              <div class="img-prev">
+                <img src="img/travel-kit-prev-2.jpg" width="140" height="149" alt="Baxter of California">
+              </div>
+              <div class="img-prev">
+                <img src="img/travel-kit-prev-3.jpg" width="140" height="149" alt="Baxter of California">
+              </div>
+                       
             </div>
           </div>
           <div class="product-content-right">
