--- a/barbershop/price-list.html
+++ b/barbershop/price-list.html
@@ -41,14 +41,14 @@
   </header>
   <main>
     <div class="container clearfix">
-      <h1>Прайс-лист</h1>
+      <p class="txt-caption">Прайс-лист</p>
       <div class="breadcrumbs">
           <ul>
             <li><a href="index.html">Главная</a></li>
             <li>Прайс-лист</li>
           </ul>
       </div>
-      <div><span class="lg-txt">ИСТИННО МУЖСКАЯ КЛАССИКА</span></div>
+      <h1 class="lg-txt">ИСТИННО МУЖСКАЯ КЛАССИКА</h1>
       <section class="price-info clearfix">
           <div class="price-info-left">
             <h3 class="txt-caption">МЫ ИСПОЛЬЗУЕМ ТОЛЬКО ЛУЧШИЕ СРЕДСТВА:</h3>
@@ -61,7 +61,7 @@
           </div>
           <div class="price-info-right">
             <h3 class="txt-caption">ЦЕНЫ НА УСЛУГИ НАШИХ МАСТЕРОВ:</h3>
-            <table>
+            <table class="price-table">
               <tr>
                 <td>СТРИЖКА</td>
                 <td>1500 &#8381;</td>
