--- a/tehnomart/index.html
+++ b/tehnomart/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,17 @@
   <title>Техномарт</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
   <header class="main-header">
     <div class="header-top">
       <div class="container clearfix">
-        <div class="header-logo">
-          <a>
-            <img src="img/logo-header.png" width="220" height="47" alt="Техномарт">
-          </a>
-        </div>
-        <label class="search"><input type="search" placeholder="Поиск"></label>
+        <a class="header-logo">
+          <img src="img/logo-header.png" width="220" height="47" alt="Техномарт">
+        </a>
+        <label class="search">
+          <input type="search" placeholder="Поиск">
+        </label>
         <div class="orders-btn">
           <a class="btn btn-success" href="#">Оформить заказ</a>
         </div>
@@ -27,9 +29,9 @@
     <div class="header-middle">
       <div class="container clearfix">
         <div class="italic-top">
-          Интернет-магазин<br>
-          строительных материалов<br>
-          и инструментов для ремонта
+          Интернет-магазин
+          <br> строительных материалов
+          <br> и инструментов для ремонта
         </div>
         <div class="header-contact">
           <span class="number">+7 (812) 555-05-55</span>
@@ -45,13 +47,27 @@
       <div class="container">
         <nav class="header-nav">
           <ul>
-            <li><a href="#">Главная</a></li>
-            <li><a href="#">Компания</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Спецпредложения</a></li>
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li>
+              <a href="#">Главная</a>
+            </li>
+            <li>
+              <a href="#">Компания</a>
+            </li>
+            <li>
+              <a href="catalog.html">Каталог</a>
+            </li>
+            <li>
+              <a href="#">Новости</a>
+            </li>
+            <li>
+              <a href="#">Спецпредложения</a>
+            </li>
+            <li>
+              <a href="#">Доставка</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -123,46 +139,46 @@
         </div>
       </section>
       <section class="popular">
-      <div class="popular-type clearfix">
-        <h2>Популярные товары</h2>
-        <a class="btn" href="">все популярные товары</a>
-      </div>
-      <div class="popular-product">
-        <div class="product-item">
-          <figure>
-            <img src="img/pop-product-1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
-          </figure>
-          <span class="product-name">Перфоратор BOSCH BFG 9000</span>
-          <span class="old-price">32500 Р.</span>
-          <span class="price">25500 Р.</span>
+        <div class="popular-type clearfix">
+          <h2>Популярные товары</h2>
+          <a class="btn" href="">все популярные товары</a>
         </div>
-        <div class="product-item">
-          <figure>
-            <img src="img/pop-product-2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
-          </figure>
-          <span class="product-name">Перфоратор BOSCH BFG 3000</span>
-          <!-- сделай этот блок как на барбершопе -->
-          <span class="old-price">22500 Р.</span>
-          <span class="price">15500 Р.</span>
-          <!-- прайсы добавь в родителя -->
+        <div class="popular-product">
+          <div class="product-item">
+            <figure>
+              <img src="img/pop-product-1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+            </figure>
+            <span class="product-name">Перфоратор BOSCH BFG 9000</span>
+            <p class="old-price">32500 Р.</p>
+            <p class="price">25500 Р.</p>
+          </div>
+          <div class="product-item">
+            <figure>
+              <img src="img/pop-product-2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+            </figure>
+            <span class="product-name">Перфоратор BOSCH BFG 3000</span>
+            <!-- сделай этот блок как на барбершопе -->
+            <p class="old-price">22500 Р.</p>
+            <p class="price">15500 Р.</p>
+            <!-- прайсы добавь в родителя -->
+          </div>
+          <div class="product-item">
+            <figure>
+              <img src="img/pop-product-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 6000">
+            </figure>
+            <span class="product-name">Перфоратор BOSCH BFG 6000</span>
+            <p class="old-price">30500 Р.</p>
+            <p class="price">25500 Р.</p>
+          </div>
+          <div class="product-item">
+            <figure>
+              <img src="img/pop-product-4.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+            </figure>
+            <span class="product-name">Перфоратор BOSCH BFG 2000</span>
+            <span class="new">new</span>
+            <p class="price">12500 Р.</p>
+          </div>
         </div>
-        <div class="product-item">
-          <figure>
-            <img src="img/pop-product-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 6000">
-          </figure>
-          <span class="product-name">Перфоратор BOSCH BFG 6000</span>
-          <span class="old-price">30500 Р.</span>
-          <span class="price">25500 Р.</span>
-        </div>
-        <div class="product-item">
-          <figure>
-            <img src="img/pop-product-4.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
-          </figure>
-          <span class="product-name">Перфоратор BOSCH BFG 2000</span>
-          <span class="new">new</span>
-          <span class="price">12500 Р.</span>
-        </div>
-      </div>
       </section>
       <section class="brands">
         <div class="popular-type clearfix">
@@ -214,53 +230,54 @@
       </section>
       <section class="service">
         <h2>Сервисы</h2>
-        <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
-            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        <p>Хороший интернет-магазин отличается от плохого не только ценами!
+          <br> Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <div class="tabs clearfix">
           <ul class="tabs-nav tabs-service">
-            <li><a class="active" href="#tab-1">Доставка</a></li>
-            <li><a href="#tab-2">Гарантия</a></li>
-            <li><a href="#tab-3">Кредит</a></li>
+            <li>
+              <a class="active" href="#tab-1">Доставка</a>
+            </li>
+            <li>
+              <a href="#tab-2">Гарантия</a>
+            </li>
+            <li>
+              <a href="#tab-3">Кредит</a>
+            </li>
           </ul>
           <div class="tab-container sevice-list">
             <div class="service-item delivery" id="tab-1">
               <h3>Доставка</h3>
               <p>
-                  Мы с удовольствием доставим ваш товар прямо 
-                  к вашему подъезду совершенно бесплатно!
-                  Ведь мы неплохо заработаем, 
-                  поднимая его на ваш этаж!
+                Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая
+                его на ваш этаж!
               </p>
             </div>
             <div class="service-item guarantee" id="tab-2">
               <h3>Гарантия</h3>
               <p>
-                  Если купленный у нас товар поломается или заискрит, 
-                  а также в случае пожара, спровоцированного его возгаранием,  
-                  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
-                  Дом уж восстановите как-нибудь сами.
+                Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием, вы всегда
+                можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь
+                сами.
               </p>
             </div>
             <div class="service-item credit" id="tab-3">
               <h3>Кредит</h3>
               <p>
-                  Залезть в долговую яму стало проще! 
-                  Кредитные консультанты придут вам на помощь.
+                Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.
               </p>
               <a href="#" class="btn">отправить заявку</a>
             </div>
           </div>
-        </div>   
+        </div>
       </section>
       <section class="information clearfix">
         <div class="about-us">
           <h3>Компания «Техномарт»</h3>
-          <p> Настоящий мужской шоппинг начинается здесь! 
-            Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.
+          <p> Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными
+            любителей сэкномить на гастарбайтерах.
           </p>
           <p>
-              Мы можем доставить ваш товар в самые отдаленные точки России!
-              Техномарт работает со многими транспортными компаниями: 
+            Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:
           </p>
           <ul class="list-service">
             <li>Деловые линии</li>
@@ -271,9 +288,9 @@
         </div>
         <div class="contact">
           <h3>Контакты</h3>
-          <p>Вы можете забрать товар сами, <br>
-              заехав в наш офис:
-            </p>
+          <p>Вы можете забрать товар сами,
+            <br> заехав в наш офис:
+          </p>
           <div class="map">
             <a href="#"></a>
           </div>
@@ -281,62 +298,80 @@
         </div>
       </section>
     </div>
- 
+
   </main>
   <footer class="main-footer">
     <div class="footer-top ">
-        <div class="container clearfix">
-          <div class="footer-logo">
-            <a href="#">
-              <img src="img/logo-footer.png" width="220" height="68" alt="Техномарт">
-            </a>
+      <div class="container clearfix">
+        <div class="footer-left">
+          <a class="footer-logo" href="#">
+            <img src="img/logo-footer.png" width="220" height="68" alt="Техномарт">
+          </a>
+          <div class="adress">
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+              <br> +7 (812) 555-05-55</p>
           </div>
-          <nav  class="nav-footer-1">
+        </div>
+        <div class="footer-right">
+          <nav class="nav-footer-1">
             <ul>
-              <li><a href="#">Компания</a></li>
-              <li><a href="#">Новости</a></li>
-              <li><a href="catalog.html">Каталог</a></li>
-              <li><a href="#">Доставка</a></li>
-              <li><a href="#">Контакты</a></li>
+              <li>
+                <a href="#">Компания</a>
+              </li>
+              <li>
+                <a href="#">Новости</a>
+              </li>
+              <li>
+                <a href="catalog.html">Каталог</a>
+              </li>
+              <li>
+                <a href="#">Доставка</a>
+              </li>
+              <li>
+                <a href="#">Контакты</a>
+              </li>
             </ul>
           </nav>
-        </div>
-    </div>
-    <div class="footer-middle">
-        <div class="container clearfix">
-          <div class="adress">
-            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> +7 (812) 555-05-55</p>
-          </div>
           <nav>
             <ul class="nav-footer-2">
-              <li><a href="#">Материалы</a></li>
-              <li><a href="#">Техника</a></li>
-              <li><a href="#">Инструмент</a></li>
-              <li><a href="#">Спецпредложения</a></li>
+              <li>
+                <a href="#">Материалы</a>
+              </li>
+              <li>
+                <a href="#">Техника</a>
+              </li>
+              <li>
+                <a href="#">Инструмент</a>
+              </li>
+              <li>
+                <a href="#">Спецпредложения</a>
+              </li>
             </ul>
           </nav>
         </div>
+      </div>
     </div>
     <div class="footer-bottom">
-        <div class="container clearfix">
-          <div class="footer-copyright">
-            <p>© 2010–2017 Компания «Техномарт»<br> Все права защищены</p>
-          </div>
-          <div class="footer-social">
-            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-          </div>
-          <div class="email">
-            <p>Обратная связь:</p>
-            <a href="mailto:mail@htmlacademy.ru"> mail@htmlacademy.ru</a>
-          </div>
-          <div class="footer-developer">
-              <p>Разработано-:</p>
-              <a class="btn" href="https://htmlacademy.ru">htmlacademy.ru</a>
-          </div>
-
+      <div class="container clearfix">
+        <div class="footer-copyright">
+          <p>© 2010–2017 Компания «Техномарт»
+            <br> Все права защищены</p>
         </div>
+        <div class="footer-social">
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        </div>
+        <div class="email">
+          <p>Обратная связь:</p>
+          <a href="mailto:mail@htmlacademy.ru"> mail@htmlacademy.ru</a>
+        </div>
+        <div class="footer-developer">
+          <p>Разработано-:</p>
+          <a class="btn" href="https://htmlacademy.ru">htmlacademy.ru</a>
+        </div>
+
+      </div>
     </div>
   </footer>
   <div class="popup map">
@@ -344,8 +379,12 @@
   <div class="feadback poupup">
     <form action="index.html">
       <div class="label-group">
-        <label>Ваше имя <input type="text" placeholder="Представьтесь, пожалуйста"></label>
-        <label>Ваш e-mail: <input type="email" placeholder="Для отправки ответа"></label>
+        <label>Ваше имя
+          <input type="text" placeholder="Представьтесь, пожалуйста">
+        </label>
+        <label>Ваш e-mail:
+          <input type="email" placeholder="Для отправки ответа">
+        </label>
       </div>
       <label>
         Текст письма:
@@ -355,4 +394,5 @@
     </form>
   </div>
 </body>
+
 </html>
