--- a/barbershop/index.html
+++ b/barbershop/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="container clearfix">
+    <div class="container header-container">
       <nav class="main-navigation">
         <ul>
           <li>
@@ -52,7 +52,7 @@
           <p>Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
       </div>
     </div>
-    <section class="index-content clearfix">
+    <section class="index-content">
       <div class="index-content-left">
         <h2 class="txt-caption">Новости</h2>
         <ul>
@@ -80,7 +80,7 @@
             </div>
       </div>
     </section>
-    <section class="index-content clearfix">
+    <section class="index-content">
         <div class="index-content-left">
           <h3 class="txt-caption">Контактная информация</h3>
             <p>
@@ -101,7 +101,7 @@
         <div class="index-content-right">
           <div class="txt-caption">Записаться</div>
             <p>Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
-            <form class="appointment-form clearfix" action="https://echo.htmlacademy.ru" method="post">
+            <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
               <div class="form-block">
                 <div class="form-item">
                   <label for="date">Дата</label>
@@ -126,7 +126,7 @@
     </section>
   </main>
   <footer class="main-footer">
-      <div class="container clearfix">
+      <div class="container footer-container">
           <div class="footer-contacts">
                 Барбершоп «Бородинский»<br>
                 Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
