--- a/barbershop/price-list.html
+++ b/barbershop/price-list.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="container clearfix">
+    <div class="container header-container">
       <div class="header-logo">
         <a href="index.html">
           <img src="img/logo-header.png" width="111" height="24" alt="Барбершоп «Бородинский»">
@@ -40,7 +40,7 @@
     </div>
   </header>
   <main>
-    <div class="container clearfix">
+    <div class="container">
       <p class="txt-caption">Прайс-лист</p>
       <div class="breadcrumbs">
           <ul>
@@ -49,7 +49,7 @@
           </ul>
       </div>
       <h1 class="lg-txt">ИСТИННО МУЖСКАЯ КЛАССИКА</h1>
-      <section class="price-info clearfix">
+      <section class="price-info">
           <div class="price-info-left">
             <h3 class="txt-caption">МЫ ИСПОЛЬЗУЕМ ТОЛЬКО ЛУЧШИЕ СРЕДСТВА:</h3>
             <ul>
@@ -79,22 +79,20 @@
       </section>
       <section class="about-us">
           <h3 class="txt-caption">НЕСКОЛЬКО СЛОВ О НАС:</h3>
-          <div class="about-us-left">
+          <div class="about-us-content">
             <p>Наша парикмахерская занимается исключительно мужскими стрижками. 
               Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа.
               Мы не работаем на количество, мы делаем качество.
             </p>
-          </div>
-          <div class="about-us-right">
-              <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, 
-                даже в обеденный перерыв. 
-                Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
+            <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, 
+              даже в обеденный перерыв. 
+              Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
           </div>
       </section>
     </div>
   </main>
   <footer class="main-footer">
-      <div class="container clearfix">
+      <div class="container footer-container">
           <div class="footer-contacts">
                 Барбершоп «Бородинский»<br>
                 Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
