--- a/barbershop/shop.html
+++ b/barbershop/shop.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="container clearfix">
+    <div class="container header-container">
       <div class="header-logo">
         <a href="index.html">
           <img src="img/logo-header.png" width="111" height="24" alt="Барбершоп «Бородинский»">
@@ -40,7 +40,7 @@
     </div>
   </header>
   <main>
-    <div class="container clearfix">
+    <div class="container products-container">
       <h1>Средства для ухода</h1>
       <div class="breadcrumbs">
           <ul>
@@ -157,7 +157,7 @@
     
   </main>
   <footer class="main-footer">
-      <div class="container clearfix">
+      <div class="container footer-container">
           <div class="footer-contacts">
                 Барбершоп «Бородинский»<br>
                 Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
