--- a/tehnomart/catalog.html
+++ b/tehnomart/catalog.html
@@ -12,7 +12,7 @@
 <body>
   <header class="main-header">
     <div class="header-top">
-      <div class="container clearfix">
+      <div class="container header-container">
         <div class="header-logo">
           <a href="index.html">
             <img src="img/logo-header.png" width="220" height="47" alt="Техномарт">
@@ -21,15 +21,15 @@
         <label class="search">
           <input type="search" placeholder="Поиск">
         </label>
+        <div class="marker">Закладка:0</div>
+        <div class="cart">Корзина:10</div>
         <div class="orders-btn">
           <a class="btn btn-success" href="#">Оформить заказ</a>
         </div>
-        <div class="cart">Корзина:10</div>
-        <div class="marker">Закладка:0</div>
       </div>
     </div>
     <div class="header-middle">
-      <div class="container clearfix">
+      <div class="container header-container">
         <div class="italic-top">
           Интернет-магазин
           <br> строительных материалов
@@ -102,7 +102,7 @@
       <div class="tool-name">
         <h1>Перфораторы</h1>
       </div>
-      <div class="contents clearfix">
+      <div class="contents">
         <div class="filter sidebar">
           <span>Фильтр:</span>
           <form action="catalog.html">
@@ -305,8 +305,8 @@
     </section>
   </main>
   <footer class="main-footer">
-    <div class="footer-top ">
-      <div class="container clearfix">
+    <div class="footer-top">
+      <div class="container footer-container">
         <div class="footer-left">
           <a class="footer-logo" href="#">
             <img src="img/logo-footer.png" width="220" height="68" alt="Техномарт">
@@ -356,7 +356,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <div class="container clearfix">
+      <div class="container footer-container">
         <div class="footer-copyright">
           <p>© 2010–2017 Компания «Техномарт»
             <br> Все права защищены</p>
