--- a/tehnomart/index.html
+++ b/tehnomart/index.html
@@ -12,22 +12,22 @@
 <body>
   <header class="main-header">
     <div class="header-top">
-      <div class="container clearfix">
+      <div class="container header-container">
         <a class="header-logo">
           <img src="img/logo-header.png" width="220" height="47" alt="Техномарт">
         </a>
         <label class="search">
           <input type="search" placeholder="Поиск">
         </label>
+        <div class="marker">Закладка: 0</div>
+        <div class="cart cart-empty">Корзина:0</div>
         <div class="orders-btn">
           <a class="btn btn-success" href="#">Оформить заказ</a>
         </div>
-        <div class="cart cart-empty">Корзина:0</div>
-        <div class="marker">Закладка: 0</div>
       </div>
     </div>
     <div class="header-middle">
-      <div class="container clearfix">
+      <div class="container header-container">
         <div class="italic-top">
           Интернет-магазин
           <br> строительных материалов
@@ -97,7 +97,7 @@
             </a>
           </div>
         </div>
-        <div class="properties-bottom clearfix">
+        <div class="properties-bottom">
           <div class="slider">
             <div class="slide-list">
               <div class="slide-item">
@@ -139,7 +139,7 @@
         </div>
       </section>
       <section class="popular">
-        <div class="popular-type clearfix">
+        <div class="popular-type">
           <h2>Популярные товары</h2>
           <a class="btn" href="">все популярные товары</a>
         </div>
@@ -181,7 +181,7 @@
         </div>
       </section>
       <section class="brands">
-        <div class="popular-type clearfix">
+        <div class="popular-type">
           <h2>Популярные производители:</h2>
           <a class="btn" href="">все популярные товары</a>
         </div>
@@ -232,7 +232,7 @@
         <h2>Сервисы</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами!
           <br> Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        <div class="tabs clearfix">
+        <div class="tabs">
           <ul class="tabs-nav tabs-service">
             <li>
               <a class="active" href="#tab-1">Доставка</a>
@@ -270,7 +270,7 @@
           </div>
         </div>
       </section>
-      <section class="information clearfix">
+      <section class="information">
         <div class="about-us">
           <h3>Компания «Техномарт»</h3>
           <p> Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными
@@ -301,8 +301,8 @@
 
   </main>
   <footer class="main-footer">
-    <div class="footer-top ">
-      <div class="container clearfix">
+    <div class="footer-top">
+      <div class="container footer-container">
         <div class="footer-left">
           <a class="footer-logo" href="#">
             <img src="img/logo-footer.png" width="220" height="68" alt="Техномарт">
@@ -352,7 +352,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <div class="container clearfix">
+      <div class="container footer-container">
         <div class="footer-copyright">
           <p>© 2010–2017 Компания «Техномарт»
             <br> Все права защищены</p>
