--- a/barbershop/item.html
+++ b/barbershop/item.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="container clearfix">
+    <div class="container header-container">
       <div class="header-logo">
         <a href="index.html">
           <img src="img/logo-header.png" width="111" height="24" alt="Барбершоп «Бородинский»">
@@ -50,7 +50,7 @@
             <li>Набор для путешествий «Baxter of California»</li>
           </ul>
       </div>
-      <section class="product-content clearfix">
+      <section class="product-content">
           <div class="product-content-left">
             <div class="product-img">
               <img src="img/travel-kit.jpg" width="460" height="498" alt="Baxter of California">
@@ -69,7 +69,7 @@
             </div>
           </div>
           <div class="product-content-right">
-            <div class="product-info clearfix">
+            <div class="product-info">
                 <p>есть в наличии</p>
                 <p class="vendor-code">Артикул: dexter-ae</p>
             </div>
@@ -95,7 +95,7 @@
     </div>
   </main>
   <footer class="main-footer">
-      <div class="container clearfix">
+      <div class="container footer-container">
           <div class="footer-contacts">
                 Барбершоп «Бородинский»<br>
                 Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
